AUGREL/src/objects/UC_Title_Update_Est_Mailing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Values for calculating Est Mailing Date</description>
    <fields>
        <fullName>Days_to_Add__c</fullName>
        <label>Days to Add</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_State__c</fullName>
        <label>Title State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>UC Title Update Est Mailing</label>
</CustomObject>